--- a/verl/trainer/config/ppo_trainer.yaml
+++ b/verl/trainer/config/ppo_trainer.yaml
@@ -183,6 +183,7 @@ algorithm:
   gamma: 1.0
   lam: 1.0
   star_coef: 1.0
+  normalize_star: False
   adv_estimator: gae
   use_kl_in_reward: False
   kl_penalty: kl  # how to estimate kl divergence
@@ -216,3 +217,4 @@ trainer:
   max_critic_ckpt_to_keep: null
   # The timeout for ray worker group to wait for the register center to be ready
   ray_wait_register_center_timeout: 300
+  save_best_ckpt: False
